conclusion passe bande

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -1924,7 +1924,7 @@ Lorsque la fréquence de simulation est de 2 GHz, les résultats montrent que $S
 \newpage
 \section{Conclusion}
 
-La conception d'un filtre passe bande a été présentée suivant différentes étapes. La première s'attache à vérifier et, si nécessaire recentrer le gabarit. Cela permet de procéder à l'étape suivante, la transformation du gabarit en passe bas. Il est alors aisément possible de déterminer l'ordre du filtre et calculer les valeurs normalisées des composants. Viens ensuite l'étape de dénormalisation visant à remplacer les composants réactifs en résonateur LC série ou parallèle. Le résultat de cette synthèse peut être simuler pour valider le bon fonctionnement. Dans notre cas, une légère dissymétrie lors du recentrage couplé à un ordre de filtre limite ont entraînés une légère sortie du gabarit. L'étape finale de transposition en technologie micro-ruban est spécifique aux contraintes hautes fréquences. Elle vise à transposer les résonateurs en ligne micro-ruban. Nous avons choisi de travailler uniquement avec des ligne demie onde et démonter qu'un résonateur LC série en ligne série et les résonateur LC parallèle stub demie onde ouvert. La simulation ADS du schéma micro-ruban montre quelques points de désaccord avec la gabarit initial. L'atténuation de la bande passante est supérieur de 0,3dB par rapport aux spécifications. Les ordres de grandeurs restent toutefois proche des exigences.  
+La conception d'un filtre passe bande a été présentée suivant différentes étapes. La première s'attache à vérifier et, si nécessaire, recentrer le gabarit. Cela permet de procéder à l'étape suivante, la transformation du gabarit en passe bas. Il est alors aisément possible de déterminer l'ordre du filtre et calculer les valeurs normalisées des composants. Viens ensuite l'étape de dénormalisation visant à remplacer chaque composant réactif en résonateur LC série ou parallèle. Le résultat de cette synthèse peut être simulé pour valider le bon fonctionnement. Dans notre cas, une dissymétrie lors du recentrage couplée à un ordre de filtre limite ont entraînés une légère sortie du gabarit. L'étape finale de transposition en technologie micro-ruban est spécifique aux contraintes hautes fréquences. Elle vise à transposer les résonateurs LC en ligne micro-ruban. Deux approches ont été présentées : la première basée uniquement sur des lignes demie onde et la seconde sur des lignes quart d'onde. Dans les deux cas la méthode est similaire, trouver un modèle équivalant aux résonateurs série et parallèle pour opérer la transposition technologique. Finalement, nous avons pu monter par simulation que la bande de validité de la fonction passe bande est deux fois plus large pour la synthèse à base de lignes quart d'onde que pour celle basée sur des lignes demie onde. 
 
 
 
