--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -1928,7 +1928,9 @@ Au cours de ce rapport il a été vu dans un premier temps une méthodologie de 
 
 Le filtre passe-bas elliptique a été conçu en essayant de respecter au mieux les exigences du cahier des charges. Une telle conception a également permis d'étudier un tout nouveau type de filtre qu'est le filtre elliptique, autrement appelé filtre de Cauer. La conception en éléments localisés a été réalisé avec les mêmes méthodes employées lors de la conception en moyennes fréquences. La seconde partie consistait à la transposition en technologie micro-ruban. Un tel passage s'est réalisé en s'appuyant sur un modèle physique basé sur des hypothèses. La réalisation a demandé de fixer des paramètres géométriques qui ont été choisis en fonction des contraintes que les concepteurs avaient (contraintes technologiques photolithographies). Les simulations ont montré que les hypothèses ne sont pas toujours respectées. Il s'agit là d'une leçon utile pour notre future carrières d'ingénieur. En effet un projet offrira diverses conceptions qu'il faudra réaliser, et cela en faisant parfois des hypothèses (pour simplifier le problème par exemple). Il est alors important en tant que futur ingénieur de garder en tête des hypothèses qui ont été émises et de connaître le cadre de validité de notre conception.\\
 
-La conception d'un filtre passe bande a été présentée suivant différentes étapes. La première s'attache à vérifier et, si nécessaire, recentrer le gabarit. Cela permet de procéder à l'étape suivante, la transformation du gabarit en passe bas. Il est alors aisément possible de déterminer l'ordre du filtre et calculer les valeurs normalisées des composants. Viens ensuite l'étape de dénormalisation visant à remplacer chaque composant réactif en résonateur LC série ou parallèle. Le résultat de cette synthèse peut être simulé pour valider le bon fonctionnement. Dans notre cas, une dissymétrie lors du recentrage couplée à un ordre de filtre limite ont entraînés une légère sortie du gabarit. L'étape finale de transposition en technologie micro-ruban est spécifique aux contraintes hautes fréquences. Elle vise à transposer les résonateurs LC en ligne micro-ruban. Deux approches ont été présentées : la première basée uniquement sur des lignes demie onde et la seconde sur des lignes quart d'onde. Dans les deux cas la méthode est similaire, trouver un modèle équivalant aux résonateurs série et parallèle pour opérer la transposition technologique. Finalement, nous avons pu monter par simulation que la bande de validité de la fonction passe bande est deux fois plus large pour la synthèse à base de lignes quart d'onde que pour celle basée sur des lignes demie onde. 
+La conception d'un filtre passe bande a été présentée suivant différentes étapes. La première s'attache à vérifier et, si nécessaire, recentrer le gabarit. Cela permet de procéder à l'étape suivante, la transformation du gabarit en passe bas. Il est alors aisément possible de déterminer l'ordre du filtre et calculer les valeurs normalisées des composants. Viens ensuite l'étape de dénormalisation visant à remplacer chaque composant réactif en résonateur LC série ou parallèle. Le résultat de cette synthèse peut être simulé pour valider le bon fonctionnement. Dans notre cas, une dissymétrie lors du recentrage couplée à un ordre de filtre limite ont entraînés une légère sortie du gabarit. L'étape finale de transposition en technologie micro-ruban est spécifique aux contraintes hautes fréquences. Elle vise à transposer les résonateurs LC en ligne micro-ruban. Deux approches ont été présentées : la première basée uniquement sur des lignes demie onde et la seconde sur des lignes quart d'onde. Dans les deux cas la méthode est similaire, trouver un modèle équivalant aux résonateurs série et parallèle pour opérer la transposition technologique. Finalement, nous avons pu monter par simulation que la bande de validité de la fonction passe bande est deux fois plus large pour la synthèse à base de lignes quart d'onde que pour celle basée sur des lignes demie onde.\\
+
+La dernière partie s'inscrit dans la conception d'une fonction d'électronique qu'est l'amplification. Il s'agissait de travailler avec un transistor AT-41485 faible bruit pour amplifier le signal à 2 GHz. De la même manière qu'en électronique des basses ou moyennes fréquences il a été nécessaire de polariser le transistor. Chaque point de polarisation, et pour diverses fréquences, la matrice $S$ est différente, ce qui a permis de comprendre la difficulté de la mise au point d'amplificateur en hautes-fréquences. En effet, dans un cas réel, une polarisation n'est jamais parfaite et un petit écart sur la tension $V_{CE}$ ou pour le courant $I_C$ désiré peut changer brutalement la matrice $S$. Il a donc été nécessaire de déterminer les paramètres $s_{11}$, $s_{12}$, $s_{21}$ et $s_{22}$ avant la réalisation des quadripôles d'entrée et de sortie pour adapter.
 
 
 
